--- a/README.textile
+++ b/README.textile
@@ -3,7 +3,7 @@ This is a basic Ruby wrapper for Rails I have written for the Infusionsoft API. 
 h2. Installation
 * Run @ruby script/plugin install git://github.com/nateleavitt/api_infusionsoft.git@
 * Create an initializer called api_infusionsoft.rb in config/initializers
-* Include this code in the initializer @AInfusionsoftApiConnection.new("https://your_app.infusionsoft.com", "YOUR API KEY")@
+* Include this code in the initializer @ApiInfusionsoft.set_account_apiconn("YOUR_APP.infusionsoft.com", "YOUR_API_KEY")@
 * Put this code @include ApiInfusionsoft@ in any object that you want to have access to the API calls
 
 From there you should be good to go.
